--- a/build.yaml
+++ b/build.yaml
@@ -15,7 +15,7 @@
 #     shield: corne_left
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
-#
+
 ---
 #include:
 #  - board: bt60_v1
@@ -25,11 +25,11 @@
 #  - board: bt65_v1
 #include:
 #  - board: bt65_v1
-#include:
-#  - board: seeeduino_xiao
-#    shield: nice_view
-#include:
-#  - board: seeeduino_xiao_ble
-#    shield: nice_view
-#include:
-#  - board: bt65_v1
+include:
+  - board: seeeduino_xiao
+    shield: nice_view
+include:
+  - board: seeeduino_xiao_ble
+    shield: nice_view
+include:
+  - board: bt65_v1
