--- a/build.yaml
+++ b/build.yaml
@@ -5,8 +5,8 @@
 # pass flags to the build command and `artifact-name` to assign a name to
 # distinguish build outputs from each other:
 #
- board: [ "nice_nano_v2" ]
- shield: [ "corne_left", "corne_right" ]
+# board: [ "nice_nano_v2" ]
+# shield: [ "corne_left", "corne_right" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
@@ -21,15 +21,15 @@ include:
   - board: bt60_v1
 #include:
 #  - board: bt60_v1
-#include:
-#  - board: bt65_v1
+include:
+  - board: bt65_v1
 #include:
 #  - board: bt65_v1
 include:
   - board: seeeduino_xiao
     shield: nice_view
-#include:
-#  - board: seeeduino_xiao_ble
-#    shield: nice_view
+include:
+  - board: seeeduino_xiao_ble
+    shield: nice_view
 #include:
 #  - board: bt65_v1
