--- a/build.yaml
+++ b/build.yaml
@@ -5,8 +5,8 @@
 # pass flags to the build command and `artifact-name` to assign a name to
 # distinguish build outputs from each other:
 #
- board: [ "nice_nano_v2" ]
- shield: [ "corne_left", "corne_right" ]
+# board: [ "nice_nano_v2" ]
+# shield: [ "corne_left", "corne_right" ]
     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
     artifact-name: corne_left_with_logging
     
