--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,6 @@
     artifact-name: corne_left_with_logging
     
 include:
-  - board: [seeeduino_xiao_ble]
-    shield: [nice_view]
+  - board: seeeduino_xiao_ble
+    shield: nice_view
 
