--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,29 @@
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
-    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-    artifact-name: corne_left_with_logging
-    
+# include:
+#   - board: bdn9_rev2
+#   - board: nice_nano_v2
+#     shield: reviung41
+#   - board: nice_nano_v2
+#     shield: corne_left
+#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+#     artifact-name: corne_left_with_logging
+#
+---
+include:
+  - board: bt60_v1
+include:
+  - board: bt60_v1
+include:
+  - board: bt65_v1
+include:
+  - board: bt65_v1
+include:
+  - board: seeeduino_xiao
+    shield: nice_view
 include:
   - board: seeeduino_xiao_ble
-    shield: nice_nano_v2
-
+    shield: nice_view
+include:
+  - board: bt65_v1
