--- a/build.yaml
+++ b/build.yaml
@@ -1,9 +1,9 @@
-# This file generates the GitHub Actions matrix.
-# For simple board + shield combinations, add them to the top level board and
-# shield arrays, for more control, add individual board + shield combinations
-# to the `include` property. You can also use the `cmake-args` property to
-# pass flags to the build command and `artifact-name` to assign a name to
-# distinguish build outputs from each other:
+# このファイルはGitHub Actionsのマトリックスを生成します。
+# シンプルなボードとシールドの組み合わせの場合、トップレベルのboardと
+# shield配列に追加し、より細かい制御が必要な場合は、
+# `include`プロパティに個々のボードとシールドの組み合わせを追加します。
+# また、ビルドコマンドにフラグを渡すために`cmake-args`プロパティを使用したり、
+# ビルド出力を区別するために`artifact-name`を割り当てることもできます：
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
@@ -19,17 +19,9 @@
 ---
 include:
   - board: bt60_v1
-include:
-  - board: bt60_v1
-include:
   - board: bt65_v1
-include:
-  - board: bt65_v1
-include:
   - board: seeeduino_xiao
     shield: nice_view
-include:
   - board: seeeduino_xiao_ble
     shield: nice_view
-include:
   - board: bt65_v1
